libraries/notification/src/main/java/com/example/mirai/libraries/notification/error/model/UserAwareException.java
package com.example.mirai.libraries.notification.error.model;

public interface UserAwareException {
    String getUserId();
}
